--- a/front/entrada/entrada.html
+++ b/front/entrada/entrada.html
@@ -5,11 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Entrada</title>
-    <link rel="stylesheet" href="/entrada/pi.estacionamento-entrada.css">
+    <link rel="stylesheet" href="./pi.estacionamento-entrada.css">
 
 
 </head>
 <body>
-    <script src="pi.estacionamento-entrada.js"></script>
+
+    <script src="./ticket.js"></script>
+    <script src="./pi.estacionamento-entrada.js"></script>
 </body>
 </html>
