--- a/front/entrada/index.html
+++ b/front/entrada/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Entrada</title>
-    <link rel="stylesheet" href="/entrada/pi.estacionamento-entrada.css">
+    <link rel="stylesheet" href="pi.estacionamento-entrada.css">
 
 
 </head>
